test/official_tests/if/class_in_then.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
if (true) class Foo {}
